added crops info

--- a/src/main/java/reforged/mods/wailaaddonsic2/i18n/en_US.properties
+++ b/src/main/java/reforged/mods/wailaaddonsic2/i18n/en_US.properties
@@ -37,3 +37,19 @@ probe.info.singularity.speed = Pressure: %s
 probe.info.centrifuge.speed = Speed: %s
 
 probe.info.eu_reader.packets.out = Packets Out: %s
+
+probe.crop.scan = Scan: %s/%s
+
+probe.crop.growth = Growth: %s/%s
+probe.crop.gain = Gain: %s/%s
+probe.crop.resistance = Resistance: %s/%s
+probe.crop.stress = Stress: %s/%s
+
+probe.crop.fertilizer = Fertilizer: %s/%s
+probe.crop.water = Water: %s/%s
+probe.crop.weedex = WeedEx: %s/%s
+
+probe.crop.nutrients = Nutrients: %s/%s
+probe.crop.humidity = Humidity: %s/%s
+probe.crop.env = Air: %s/%s
+probe.crop.light = Light: %s/%s
