reorganized things, first gregtech integration patch, renamed the mod

--- a/src/main/java/reforged/mods/blockhelper/addons/i18n/en_US.properties
+++ b/src/main/java/reforged/mods/blockhelper/addons/i18n/en_US.properties
@@ -1,12 +1,21 @@
 probe.info.wrenchable = Wrenchable Block
 probe.info.wrenchable.rate = Drop Rate
 
+probe.info.tier.ulv = ULV
 probe.info.tier.lv = LV
 probe.info.tier.mv = MV
 probe.info.tier.hv = HV
 probe.info.tier.ev = EV
 probe.info.tier.iv = IV
 probe.info.tier.luv = LuV
+probe.info.tier.zpm = ZPM
+probe.info.tier.uv = UV
+probe.info.tier.uhv = UHV
+probe.info.tier.uev = UEV
+probe.info.tier.uiv = UIV
+probe.info.tier.umv = UMV
+probe.info.tier.uxv = UXV
+probe.info.tier.max = MAX
 
 probe.info.miner.retracting = State: Retracting
 probe.info.miner.mining = State: Mining
@@ -19,15 +28,15 @@ probe.info.heat = Heat:
 probe.info.eu_reader.cable_limit = Energy Limit: %s EU
 probe.info.eu_reader.cable_loss = Energy Loss: %s EU
 probe.info.eu_reader.tier = Tier: %s
-probe.info.eu_reader.max_in = Max Input: %s EU/t
+probe.info.eu_reader.max_in = Max Input: %s EU/p
 probe.info.eu_reader.usage = Usage: %s EU/t
 probe.info.progress = Progress: %s
 probe.info.induction.heat = Heat: %s
 probe.info.matter.amplifier = Amplifier: %s
 probe.info.generator.output = Generating: %s EU/t
-probe.info.generator.max_output = Max Output: %s EU/t
+probe.info.generator.max_output = Max Output: %s EU/p
 
-probe.info.storage.output = Output: %s EU/t
+probe.info.storage.output = Output: %s EU/p
 probe.info.transformer.inverted = Inverted: %s
 probe.info.teleporter.target = Teleport Target: %s %s %s
 probe.info.teleporter.target.set = Teleport Target Set: %s
@@ -53,3 +62,14 @@ probe.crop.nutrients = Nutrients: %s/%s
 probe.crop.humidity = Humidity: %s/%s
 probe.crop.env = Air: %s/%s
 probe.crop.light = Light: %s/%s
+
+probe.info.liquid = %s: %s/%s mB
+
+probe.info.gt.wrenchable.warning = Use GregTech Wrenches Instead!
+probe.info.gt.possible_upgrades = Possible Upgrades:
+probe.info.gt.overclockers = %s Overclocker Upgrades
+probe.info.gt.transformers = %s Transformer Upgrades
+probe.info.gt.batteries = %s Additional Energy
+probe.info.gt.mj = %s MJ Converter Upgrade
+probe.info.gt.steam = %s Steam Upgrade
+probe.info.gt.invalid = Incomplete Machine Casing!
