fixed a bunch of formatting issues

--- a/src/main/resources/mods/blockhelper/addons/lang/en_US.properties
+++ b/src/main/resources/mods/blockhelper/addons/lang/en_US.properties
@@ -1,6 +1,9 @@
 probe.info.wrenchable = Wrenchable Block
 probe.info.wrenchable.rate = Drop Rate
 
+probe.true = true
+probe.false = false
+
 probe.info.tier.ulv = ULV
 probe.info.tier.lv = LV
 probe.info.tier.mv = MV
