added additional info for crops

--- a/src/main/resources/mods/BlockHelperAddons/lang/en_US.lang
+++ b/src/main/resources/mods/BlockHelperAddons/lang/en_US.lang
@@ -189,7 +189,7 @@ probe.crop.by=By: %s
 probe.crop.by.unknown=Unknown
 probe.crop.grow.not=Can't grow
 probe.crop.grow.rate=~ Growth Rate: %s
-probe.crop.growth=Growth
+probe.crop.growth=#### Growth ####
 probe.crop.stats=#### Stats ####
 probe.crop.storage=#### Storage ####
 probe.crop.env=#### Environment ####
@@ -212,3 +212,5 @@ probe.crop.unknown=Unknown Crop
 probe.crop.discovered=Discovered by: %s
 probe.crop.name=Crop: %s
 probe.machine.xp=Stored: %s XP
+probe.crop.harvest=Can Harvest: %s
+probe.seed.drop.chance=Seed Drop Chance: %s%%
