--- a/src/main/resources/mods/BlockHelperAddons/lang/en_US.lang
+++ b/src/main/resources/mods/BlockHelperAddons/lang/en_US.lang
@@ -1,6 +1,76 @@
 info.wrenchable = Wrenchable Block
 info.wrenchable.rate = %s%% Drop Rate
 
+info.energy = Energy: %s/%s EU
+info.energy.tier=Tier: %s
+info.energy.input.max=Max Input: %s EU/t
+info.energy.usage=Usage: %s EU/t
+info.generator.output = Generating: %s EU/t
+info.generator.max_output = Max Output: %s EU/p
+info.storage.output = Output: %s EU/p
+info.eu_reader.packets.out = Packets Out: %s
+info.speed.heat=Heat: %s%%
+info.speed.rotation=Rotation: %s%%
+info.speed.pressure=Pressure: %s%%
+info.speed.speed=Speed: %s%%
+info.speed.massFab=Progress: %s%%
+info.gt.possible_upgrades = Possible Upgrades:
+info.gt.overclockers = %s Overclocker Upgrades
+info.gt.transformers = %s Transformer Upgrades
+info.gt.batteries = %s Additional Energy
+info.gt.mj = %s MJ Converter Upgrade
+info.gt.steam = %s Steam Upgrade
+info.gt.invalid = Incomplete Machine Casing!
+info.heat = Heat:
+info.gt.detector.players.all=Detects all Players
+info.gt.detector.players.you=Detects only you
+info.gt.detector.players.other=Detects only other Players
+info.gt.wrenchable.warning = Use GregTech Wrenches Instead!
+info.eu_reader.usage = Usage: %s EU/t
+info.progress = Progress: %s%%
+info.eu_reader.cable_limit = Energy Limit: %s EU
+info.eu_reader.cable_loss = Energy Loss: %s EU
+
+info.crop.by=Discovered by: %s
+info.crop.by.unknown=Unknown
+info.crop.info.scan=Scan: %s/%s
+info.crop.growth=#### Growth ####
+info.crop.info.stage_done=Stage: %s (Grown)
+info.crop.info.stage=Stage: %s/%s
+info.crop.info.points=Points: %s/%s
+info.crop.grow.not=Can't grow
+info.crop.grow.rate=~ Growth Rate: %s
+info.crop.harvest=Can Harvest: %s
+info.crop.stats=#### Stats ####
+info.crop.info.growth=Growth: %s/%s
+info.crop.info.gain=Gain: %s/%s
+info.crop.info.resistance=Resist.: %s/%s
+info.crop.info.needs=Stress: ~%s/%s
+info.crop.drop.chance=Seed Drop Chance: %s%%
+info.crop.storage=#### Storage ####
+info.crop.info.fertilizer=Fertilizer: %s/%s
+info.crop.info.water=Water: %s/%s
+info.crop.info.weedex=WeedEx: %s/%s
+info.crop.env=#### Environment ####
+info.crop.info.nutrients=Nutrients: %s/%s
+info.crop.info.humidity=Humidity: %s/%s
+info.crop.info.env=Env. Quality: %s/%s
+info.crop.info.light=Light Level: %s/%s
+
+info.fuel = Fuel: %s/%s
+probe.reactor.heat.short=Heat: %s
+info.matter.amplifier = Amplifier: %s
+
+info.miner.level = Mining Level: %s
+info.miner.retracting=State: Retracting
+info.miner.stuck=State: Stuck
+info.miner.mining=State: Mining
+
+info.teleporter.target.set = Teleport Target Set: %s
+info.teleporter.target = Teleport Target: %s %s %s
+
+info.transformer.inverted = Inverted: %s
+
 info.tier.ulv = ULV
 info.tier.lv = LV
 info.tier.mv = MV
@@ -17,200 +87,4 @@ info.tier.umv = UMV
 info.tier.uxv = UXV
 info.tier.max = MAX
 
-info.miner.retracting = State: Retracting
-info.miner.mining = State: Mining
-info.miner.stuck = State: Stuck
-info.miner.level = Mining Level: %s
-
-info.energy = Energy: %s/%s EU
-info.fuel = Fuel: %s/%s
-info.heat = Heat:
-info.eu_reader.cable_limit = Energy Limit: %s EU
-info.eu_reader.cable_loss = Energy Loss: %s EU
-info.eu_reader.tier = Tier: %s
-info.eu_reader.max_in = Max Input: %s EU/p
-info.eu_reader.usage = Usage: %s EU/t
-info.progress = Progress: %s%%
-info.induction.heat = Heat: %s%%
-info.matter.amplifier = Amplifier: %s
-info.generator.output = Generating: %s EU/t
-info.generator.max_output = Max Output: %s EU/p
-
-info.storage.output = Output: %s EU/p
-info.transformer.inverted = Inverted: %s
-info.teleporter.target = Teleport Target: %s %s %s
-info.teleporter.target.set = Teleport Target Set: %s
-
-info.rotary.speed = Speed: %s
-info.singularity.speed = Pressure: %s
-info.centrifuge.speed = Speed: %s
-
-info.eu_reader.packets.out = Packets Out: %s
-
-crop.scan = Scan: %s/%s
-
-crop.growth = Growth: %s/%s
-crop.gain = Gain: %s/%s
-crop.resistance = Resistance: %s/%s
-crop.stress = Stress: %s/%s
-
-crop.fertilizer = Fertilizer: %s/%s
-crop.water = Water: %s/%s
-crop.weedex = WeedEx: %s/%s
-
-crop.nutrients = Nutrients: %s/%s
-crop.humidity = Humidity: %s/%s
-crop.env = Air: %s/%s
-crop.light = Light: %s/%s
-
-info.liquid = %s: %s/%s mB
-
-info.gt.wrenchable.warning = Use GregTech Wrenches Instead!
-info.gt.possible_upgrades = Possible Upgrades:
-info.gt.overclockers = %s Overclocker Upgrades
-info.gt.transformers = %s Transformer Upgrades
-info.gt.batteries = %s Additional Energy
-info.gt.mj = %s MJ Converter Upgrade
-info.gt.steam = %s Steam Upgrade
-info.gt.invalid = Incomplete Machine Casing!
-info.gt.detector.players.all=Detects all Players
-info.gt.detector.players.you=Detects only you
-info.gt.detector.players.other=Detects only other Players
-
 info.bar=[%s]
-
-# new locale --------------------------------------------------------------------------------------------
-item.probe.name=IC2C: Probe Item
-progress.material.name=Material: %s/%s
-probe.transformer.inverted=Inverted: %s
-probe.enchanter.missing=Requires XP!
-
-probe.crop.seed_drop=Seed Mode: %s
-probe.personal.owner=Owner: %s
-
-tooltip.item.eu_reader.cable_flow_out=Energy Out: %sEU/t
-tooltip.item.eu_reader.cable_flow_in=Energy In: %sEU/t
-tooltip.item.eu_reader.cable_flow=Energy Flow: %sEU/t
-
-probe.sneak.info=Sneak for energy stats...
-probe.energy.stats.info=-== Energy Stats ==-
-
-probe.barrel.status.beer.name=Type: Beer
-probe.barrel.status.rum.name=Type: Rum
-probe.barrel.status.storage.name=Storage
-probe.barrel.status.brew.name=Brew
-
-probe.barrel.beer.wheat.name=Wheat: %s / 64
-probe.barrel.beer.hops.name=Hops: %s / 64
-
-probe.barrel.beer.sugar_cane.name=Sugarcane: %s / 32
-
-probe.barrel.beer.alc.0.name=Alcohol Level: Soup
-probe.barrel.beer.alc.1.name=Alcohol Level: Alcfree
-probe.barrel.beer.alc.2.name=Alcohol Level: White
-probe.barrel.beer.alc.3.name=Alcohol Level: Normal
-probe.barrel.beer.alc.4.name=Alcohol Level: Dark
-probe.barrel.beer.alc.5.name=Alcohol Level: Full
-probe.barrel.beer.alc.6.name=Alcohol Level: Black
-probe.barrel.beer.quality.0.name=Brew Quality: Brew
-probe.barrel.beer.quality.1.name=Brew Quality: Youngster
-probe.barrel.beer.quality.2.name=Brew Quality: Beer
-probe.barrel.beer.quality.3.name=Brew Quality: Ale
-probe.barrel.beer.quality.4.name=Brew Quality: Dragonblood
-probe.barrel.beer.quality.5.name=Brew Quality: Bad
-probe.barrel.beer.solid.0.name=Solid Ratio: Watery
-probe.barrel.beer.solid.1.name=Solid Ratio: Clear
-probe.barrel.beer.solid.2.name=Solid Ratio: Lite
-probe.barrel.beer.solid.3.name=Solid Ratio: Normal
-probe.barrel.beer.solid.4.name=Solid Ratio: Strong
-probe.barrel.beer.solid.5.name=Solid Ratio: Thick
-probe.barrel.beer.solid.6.name=Solid Ratio: Stodge
-probe.barrel.beer.solid.6a=Solid Ratio: Stodge
-
-probe.energy.tier=Tier: %s
-probe.energy.output=Current Output: %s EU/t
-probe.energy.output.max=Max Output: %s EU/t
-probe.energy.input.max=Max Input: %s EU/t
-probe.energy.usage=Usage: %s EU/t
-probe.energy.transfer=Transferrate: %s EU
-probe.machine.heat=Heat: %s
-probe.energy.output.passive=Passive Output: %s EU/t
-probe.storage.fuel=Fuel: %s
-probe.packet.tick=Output Packets: %s
-probe.energy.storage.name=Energy: %s EU
-probe.energy.storage.full.name=Energy: %s/%s EU
-probe.info.fluid=%s: %s/%s mB
-probe.wrenchable.drop_chance.info=%s%% Drop Chance
-probe.wrenchable.info=Wrenchable Block
-probe.progress.full.name=Progress: %s / %st
-probe.progress.full_misc.name=Progress: %s / %s
-probe.speed.heat=Heat: %s%%
-probe.speed.rotation=Rotation: %s%%
-probe.speed.pressure=Pressure: %s%%
-probe.speed.speed=Speed: %s%%
-probe.speed.massFab=Progress: %s%%
-probe.speed.vacuum=Vacuum: %s%%
-probe.energy.limit=Energy Limit: %s EU
-probe.energy.loss=Energy Loss: %s EU
-probe.block.range=Radius: %s Blocks
-probe.electrolyzer.charging=Mode: Charging
-probe.electrolyzer.discharging=Mode: Discharging
-probe.electrolyzer.transfer=Mode: Transferring
-probe.electrolyzer.nothing=Mode: Idle
-probe.miner.stuck=State: Stuck
-probe.miner.mining=State: Mining
-probe.miner.retracting=State: Retracting
-probe.miner.power=State: Out of Power
-probe.miner.refuel=State: Refueling
-probe.miner.progress=Mining Level: %s
-probe.reactor.breeding=Breeding Multiplier: %sX
-probe.steam.output=Steam Production: %s mB/t
-probe.water.consumption=Water Usage: %s mB/t
-probe.reactor.heat.short=Heat: %s
-probe.reactor.heat=Heat: %s/%s
-probe.personal.view=Allow Viewing: %s
-probe.personal.import=Allow injection from world: %s
-probe.personal.export=Allow extraction to world: %s
-probe.personal.team=Allow team member interaction: %s
-probe.plasma=Plasma: %s / 10000
-probe.matter=Matter: %s / 100
-probe.pump.progress=Pump level: %s
-probe.teleporter.type=Teleport Type: %s
-probe.teleporter.type.entity=Entity
-probe.teleporter.type.item=Item
-probe.teleporter.type.fluid=Fluid
-probe.teleporter.type.energy=Energy
-probe.teleporter.type.spawner=Spawner
-probe.teleporter.target=Target: %s %s %s
-probe.teleporter.target.set=Target Set: %s
-probe.uranium.type=%s: %s / 1000
-
-probe.crop.by=By: %s
-probe.crop.by.unknown=Unknown
-probe.crop.grow.not=Can't grow
-probe.crop.grow.rate=~ Growth Rate: %s
-probe.crop.growth=#### Growth ####
-probe.crop.stats=#### Stats ####
-probe.crop.storage=#### Storage ####
-probe.crop.env=#### Environment ####
-probe.crop.info.stage=Stage: %s/%s
-probe.crop.info.points=Points: %s/%s
-probe.crop.info.stage_done=Stage: %s (Grown)
-probe.crop.info.growth=Growth: %s/%s
-probe.crop.info.gain=Gain: %s/%s
-probe.crop.info.resistance=Resist.: %s/%s
-probe.crop.info.needs=Stress: ~%s/%s
-probe.crop.info.scan=Scan: %s/%s
-probe.crop.info.fertilizer=Fertilizer: %s/%s
-probe.crop.info.water=Water: %s/%s
-probe.crop.info.weedex=WeedEx: %s/%s
-probe.crop.info.nutrients=Nutrients: %s/%s
-probe.crop.info.humidity=Humidity: %s/%s
-probe.crop.info.env=Env. Quality: %s/%s
-probe.crop.info.light=Light Level: %s/%s
-probe.crop.unknown=Unknown Crop
-probe.crop.discovered=Discovered by: %s
-probe.crop.name=Crop: %s
-probe.machine.xp=Stored: %s XP
-probe.crop.harvest=Can Harvest: %s
-probe.seed.drop.chance=Seed Drop Chance: %s%%
