--- a/src/main/resources/mods/BlockHelperAddons/lang/ru_RU.lang
+++ b/src/main/resources/mods/BlockHelperAddons/lang/ru_RU.lang
@@ -25,31 +25,32 @@ info.gt.detector.players.all = Обнаруживать всех игроков
 info.gt.detector.players.you = Обнаруживать только вас
 info.gt.detector.players.other = Обнаруживать только других игроков
 info.gt.wrenchable.warning = Используйте гаечный ключ из GregTech!
-info.progress = Процесс: %s%%
+info.progress = Прогресс: %s%%
+info.progress.full = Прогресс: %1$s / %2$s
 info.eu_reader.cable_limit = Предел напряжения: %s EU
 info.eu_reader.cable_loss = Потеря энергии: %s EU
 
 info.crop.by = Обнаружил: %s
 info.crop.by.unknown = Неизвестный
 info.crop.info.scan = Просканировано: %s/%s
-info.crop.growth = #### Этапы роста ####
+info.crop.growth = Этапы роста
 info.crop.info.stage_done = Стадия: %s (выросло)
 info.crop.info.stage = Стадия: %s/%s
 info.crop.info.points = Очки: %s/%s
 info.crop.grow.not = Не может расти
 info.crop.grow.rate = ~ Темп роста: %s
 info.crop.harvest = Можно собирать: %s
-info.crop.stats = #### Характеристики ####
+info.crop.stats = Характеристики
 info.crop.info.growth = Рост: %s/%s
 info.crop.info.gain = Прирост: %s/%s
 info.crop.info.resistance = Сопротивление: %s/%s
 info.crop.info.needs = Стресс: ~%s/%s
 info.crop.drop.chance = Шанс выпадения семян: %s%%
-info.crop.storage = #### Уход за культурой ####
+info.crop.storage = Уход за культурой
 info.crop.info.fertilizer = Удобрение: %s/%s
 info.crop.info.water = Вода: %s/%s
 info.crop.info.weedex = Средство от сорняков: %s/%s
-info.crop.env = #### Окружающая среда ####
+info.crop.env = Окружающая среда
 info.crop.info.nutrients = Плодородность почвы: %s/%s
 info.crop.info.humidity = Влажность: %s/%s
 info.crop.info.env = Качество воздуха: %s/%s
@@ -57,6 +58,7 @@ info.crop.info.light = Освещенность: %s/%s
 
 info.fuel = Топливо: %s/%s
 info.reactor.heat.short = Нагрев: %s
+info.reactor.heat.long=Нагрев: %1$s / %2$s
 info.matter.amplifier = Усилитель: %s
 
 info.miner.level = Уровень добычи: %s
