--- a/src/main/resources/mods/BlockHelperAddons/lang/en_US.lang
+++ b/src/main/resources/mods/BlockHelperAddons/lang/en_US.lang
@@ -33,24 +33,24 @@ info.eu_reader.cable_loss = Energy Loss: %s EU
 info.crop.by = Discovered by: %s
 info.crop.by.unknown = Unknown
 info.crop.info.scan = Scan: %s/%s
-info.crop.growth = #### Growth ####
+info.crop.growth = Growth
 info.crop.info.stage_done = Stage: %s (Grown)
 info.crop.info.stage = Stage: %s/%s
 info.crop.info.points = Points: %s/%s
 info.crop.grow.not = Can't grow
 info.crop.grow.rate = ~ Growth Rate: %s
 info.crop.harvest = Can Harvest: %s
-info.crop.stats = #### Stats ####
+info.crop.stats = Stats
 info.crop.info.growth = Growth: %s/%s
 info.crop.info.gain = Gain: %s/%s
 info.crop.info.resistance = Resist.: %s/%s
 info.crop.info.needs = Stress: ~%s/%s
 info.crop.drop.chance = Seed Drop Chance: %s%%
-info.crop.storage = #### Storage ####
+info.crop.storage = Storage
 info.crop.info.fertilizer = Fertilizer: %s/%s
 info.crop.info.water = Water: %s/%s
 info.crop.info.weedex = WeedEx: %s/%s
-info.crop.env = #### Environment ####
+info.crop.env = Environment
 info.crop.info.nutrients = Nutrients: %s/%s
 info.crop.info.humidity = Humidity: %s/%s
 info.crop.info.env = Env. Quality: %s/%s
@@ -58,7 +58,7 @@ info.crop.info.light = Light Level: %s/%s
 
 info.fuel = Fuel: %s/%s
 info.reactor.heat.short = Heat: %s
-info.reactor.heat.long = Heat: %s/%s
+info.reactor.heat.long=Heat: %1$s / %2$s
 info.matter.amplifier = Amplifier: %s
 
 info.miner.level = Mining Level: %s
