fixes: a lot of individual fixes - fixed basic machines info being inconsistent - cleaned Formatter - fixed generator production value display - changed power - tier - show heat value when above 0 only - added missing item names - added Personal blocks info provider - removed unused field accessor - register wrenchable provider last

--- a/src/main/resources/mods/BlockHelperAddons/lang/en_US.lang
+++ b/src/main/resources/mods/BlockHelperAddons/lang/en_US.lang
@@ -70,6 +70,13 @@ info.teleporter.target.set = Teleport Target Set: %s
 info.teleporter.target = Teleport Target: %s %s %s
 
 info.transformer.inverted = Inverted: %s
+info.personal.access = Can access: %s
+info.personal.owner = Owner: %s
+
+block.blockBarrel.full=Booze Barrel (Full)
+block.blockBarrel.empty=Booze Barrel (Empty)
+
+block.cfoam.wall=Construction Foam
 
 info.tier.ulv = ULV
 info.tier.lv = LV
