--- a/src/main/resources/mods/BlockHelperAddons/lang/ru_RU.lang
+++ b/src/main/resources/mods/BlockHelperAddons/lang/ru_RU.lang
@@ -70,6 +70,13 @@ info.teleporter.target.set = Цель установлена: %s
 info.teleporter.target = Координаты цели: %s %s %s
 
 info.transformer.inverted = Инвертирован: %s
+info.personal.access = Имеет доступ: %s
+info.personal.owner = Владелец: %s
+
+block.blockBarrel.full=Booze Barrel (Full)
+block.blockBarrel.empty=Booze Barrel (Empty)
+
+block.cfoam.wall=Construction Foam
 
 info.tier.ulv = ULV
 info.tier.lv = LV
