fixes: getting close to release - fixed: formatter - added: PersonalInfoProvider - fixed: generator generating value - fixed: Helper methods optimization - fixed: display heat only when above 0 - removed: unused reflection code - fixed: access config values using IPluginConfig instead of using BlockHelper internals

--- a/src/main/resources/mods/BlockHelperAddons/lang/ru_RU.lang
+++ b/src/main/resources/mods/BlockHelperAddons/lang/ru_RU.lang
@@ -70,6 +70,8 @@ info.teleporter.target.set = Цель установлена: %s
 info.teleporter.target = Координаты цели: %s %s %s
 
 info.transformer.inverted = Инвертирован: %s
+info.personal.access = Имеет доступ: %s
+info.personal.owner = Владелец: %s
 
 info.tier.ulv = ULV
 info.tier.lv = LV
