added: Tool integration for Nano/Quantum Helmets Now we can integrate all the required tools inside our Nano or Quantum helmets, which allows us to free up some space inside our hotbar

--- a/src/main/resources/mods/BlockHelperAddons/lang/en_US.lang
+++ b/src/main/resources/mods/BlockHelperAddons/lang/en_US.lang
@@ -124,3 +124,7 @@ info.tier.uxv = UXV
 info.tier.max = MAX
 
 info.bar = [%s]
+
+info.tooltip.tools.installed = Installed Tools:
+message.chat.extracted = Extracted: %s
+message.chat.extracted.none = No tools installed inside this helmet!
