fixed: tier lang entry overlapping

--- a/src/main/resources/mods/BlockHelperAddons/lang/en_US.json
+++ b/src/main/resources/mods/BlockHelperAddons/lang/en_US.json
@@ -3,7 +3,7 @@
   "info.wrenchable.rate": "%s%% Drop Rate",
 
   "info.energy": "Energy: %s/%s EU",
-  "info.energy.tier": "Tier: %s",
+  "info.energy.tier.0": "Tier: %s",
   "info.energy.input.max": "Max Input: %s EU/t",
   "info.energy.usage": "Usage: %s EU/t",
   "info.generator.output": "Generating: %s EU/t",
